KT1-97: fix(api):Update game result api with frontend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,8 +11,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./app /app
+#. /app
+COPY . . 
 
-EXPOSE 8002
+EXPOSE 8020
 
-CMD ["python","memory-flip-card"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8020"]
