--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,8 @@
 FROM python:3.12.3
 
+# YOLO 설정 저장 디렉토리 환경 변수 
+ENV YOLO_CONFIG_DIR=/app/yolo-config
+
 # opencv 라이브러리 설치
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
